--- a/style/general.css
+++ b/style/general.css
@@ -1,16 +1,13 @@
+body{width: 100%;}
 /*Tamaño de la pagina + centrado*/
 .contenedor{
-    background: #fff;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 90%;
     max-width: 1000px;
     margin: 20px auto;
 }
 /*Banner + menu navegacion*/
-.banner{
-    width: 100%;
-
-}
+.banner{width: 100%;}
 header nav{
     border: 1px solid #3f3f3f;
     background: #b41111; /*Color del menu*/
@@ -19,7 +16,7 @@ header nav{
 header nav ul {list-style: none;margin:0; padding:0;} /*Quita biñetas*/
 header nav ul li {float: left;} /*Elementos uno al lado del otro*/
 header nav ul li a{
-    padding: 10px 16.99px;
+    padding: 10px 16px;
     display: block;
     color: #fff;
     text-decoration: none;
@@ -34,3 +31,13 @@ section article{
     padding: 20px;
     background: lightcoral;
 }
+section article table{
+    border: 2px solid black;
+    box-shadow: 10px 5px 5px black;
+    padding: 15px;
+}
+
+h1, h2, h3, h4{color: rgb(141, 0, 0);}
+h1{font-size: xx-large;}
+h2{font-size: xx-large;}
+h3{font-size: x-large;}
