--- a/style/general.css
+++ b/style/general.css
@@ -41,3 +41,5 @@ h1, h2, h3, h4{color: rgb(141, 0, 0);}
 h1{font-size: xx-large;}
 h2{font-size: xx-large;}
 h3{font-size: x-large;}
+
+img{width: 300px;}
