--- a/style/general.css
+++ b/style/general.css
@@ -3,7 +3,6 @@ body{width: 100%;}
 .contenedor{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 90%;
-    max-width: 1000px;
     margin: 20px auto;
 }
 /*Banner + menu navegacion*/
@@ -42,4 +41,12 @@ h1{font-size: xx-large;}
 h2{font-size: xx-large;}
 h3{font-size: x-large;}
 
-img{width: 300px;}
+img{width: 70%;}
+.logoGuia
+{
+    width: 80%;
+}
+.logoProfesion
+{
+    width: 20%;
+}
