--- a/style/general.css
+++ b/style/general.css
@@ -1,7 +1,7 @@
 body{width: 100%;}
 /*Tamaño de la pagina + centrado*/
 .contenedor{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Lucida Bright, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: medium;
     width: 90%;
     margin: 20px auto;
